2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: In support of gcc 3.1, added one of more
	of the sections .jcr, .rodata*, .data.*, .gnu.linkonce.s2.*,
	.gnu.linkonce.sb2.*, and .gnu.linkonce.s.*.  Spacing corrections
	and direction of segments to memory regions may also have been
	addressed.  This was a sweep across all BSPs.
 
2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* 3c509/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* console/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* ne2000/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* start/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* startup/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* wd8003/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* wrapup/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* PR139
	* configure.ac: Remove stray ';', breaks building with automake-1.6.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/bsp.h: Include rtems/bspIo.h instead of bspIo.h.

2001-12-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Replace -lrtemsall with -lrtemsbsp -lrtemscpu,
	replace -lrtemsall_g with -lrtemsbsp_g -lrtemscpu_g.

2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Introduce RTEMS_BSP_CONFIGURE.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* console/inch.c: Fixed typo.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.